Overflow during animations should be fixed now

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -3,20 +3,27 @@
 
 body {
     color: var(--text-color-1);
-    padding: 8.3rem 2.4rem;
     transition: background-color 0.2s ease-out, color 0.2s ease-in;
     background-image: url('../assets/images/pattern-background-desktop-light.svg'), linear-gradient(var(--background-color-1), var(--background-color-1));
     background-repeat: no-repeat;
     background-size: cover;
-    overflow-x: hidden;
 
     @include respond-to('medium') {
         background-image: url('../assets/images/pattern-background-tablet-light.svg'), linear-gradient(var(--background-color-1), var(--background-color-1));
-        padding: 4rem 2.4rem;
     }
 
     @include respond-to('small') {
         background-image: url('../assets/images/pattern-background-mobile-light.svg'), linear-gradient(var(--background-color-1), var(--background-color-1));
+    }
+}
+
+main {
+    padding: 8.3rem 2.4rem;
+    overflow-x: hidden;
+    position: relative;
+
+    @include respond-to('medium') {
+        padding: 4rem 2.4rem;
     }
 }
 
